--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -15,41 +15,41 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-star" id="navbar-app">
-            <ul class="navbar-nav">
+            <ul sec:authorize="isAuthenticated()" class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" th:classappend="${option == 'Vista'}?'active' :''" th:href="">Juegos</a>
+                    <a class="nav-link" th:classappend="${option == 'Vista'}?'active' :''" th:href="@{/juegos/vista}">Juegos</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:classappend="${option == 'Juegos'}?'active' :''" th:href=""><span>Mis </span>Juegos</a>
+                <li sec:authorize="hasAuthority('USER')" class="nav-item">
+                    <a class="nav-link" th:classappend="${option == 'Juegos'}?'active' :''" th:href="@{/juegos/lista}"><span>Mis </span>Juegos</a>
                 </li>
-                <li class="nav-item" >
-                    <a class="nav-link" th:classappend="${option == 'Plataformas'}?'active' :''" th:href="" >Plataformas</a>
+                <li sec:authorize="hasAuthority('ADMIN')" class="nav-item" >
+                    <a class="nav-link" th:classappend="${option == 'Plataformas'}?'active' :''" th:href="@{/plataformas/lista}" >Plataformas</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:classappend="${option == 'Distribuidoras'}?'active' :''" th:href="" >Distribuidoras</a>
+                <li sec:authorize="hasAuthority('ADMIN')" class="nav-item">
+                    <a class="nav-link" th:classappend="${option == 'Distribuidoras'}?'active' :''" th:href="@{/distribuidoras/lista}" >Distribuidoras</a>
                 </li>
             </ul>
         </div>
             <div class="collapse navbar-collapse justify-content-end" id="navbar-app">
-                <ul class="navbar-nav">
+                <ul sec:authorize="isAnonymous()" class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" th:href="">Ingresar</a>
+                        <a class="nav-link" th:href="@{/user/signIn}">Ingresar</a>
                     </li>
                 </ul>
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                            <a class="nav-link" th:href="  th:title="|Carrito de Compras|">
+                <ul sec:authorize="hasAnyAuthority('USER','ADMIN')" class="navbar-nav">
+                    <li sec:authorize="hasAnyAuthority('USER')" class="nav-item">
+                            <a class="nav-link" th:href="@{/carrito}" th:text="|Carrito de compras|">
                             <i class="bi bi-cart3 position-relative" style="font-size: 20px;">
                             </i>
                         </a>
                     </li>
-                    <li class="nav-item dropdown">
+                    <li sec:authorize="hasAnyAuthority('USER','ADMIN')" class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="width: -webkit-fill-available;text-align: -webkit-center;">
                             <li>
                                 <a class="dropdown-item" href="#">
-                                    <form class="form-inline my-4 my-lg-0" th:action="" method="post">
+                                    <form class="form-inline my-4 my-lg-0" th:action="@{/logout}" method="post">
                                         <button type="submit" class="btn btn-link btn-sm nav-link" style="color: #c82333; border-left-width: 0px; padding-left: 0px;"><span class="bi bi-box-arrow-left"></span> Cerrar Sesión</button>
                                     </form>
                                 </a>
