--- a/src/main/resources/templates/user/signIn.html
+++ b/src/main/resources/templates/user/signIn.html
@@ -16,12 +16,14 @@
                     <div th:if="${param.error}" class="alert alert-danger" role="alert">
                         Acceso Denegado
                     </div>
-                    <form class="row g-3" method="post">
+                    <form class="row g-3" method="post" th:action="@{/processLogin}">
                         <div class="form-group">
-                            <label for="">Usuario</label>
+                            <label>Usuario</label>
+                            <input type="text" name="username" class="form-control">
                         </div>
                         <div class="form-group">
-                            <label for="">Contraseña</label>
+                            <label>Contraseña</label>
+                            <input type="password" name="password" class="form-control">
                         </div>
                         <div class="form-group">
                             <button type="submit" class="btn btn-primary btn-block">Ingresar</button>
