--- a/src/main/resources/templates/juegos/vista.html
+++ b/src/main/resources/templates/juegos/vista.html
@@ -15,16 +15,16 @@
                 </div>
                 <div class="container-fluid">
                     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 card-app">
-                        <div class="col mb-4">
+                        <div class="col mb-4" th:each="juegos: ${listaJuegos}">
                             <div class="card" >
-                                <img class="card-img-top" alt="Card image cap">
+                                <img class="card-img-top" alt="Card image cap" th:src="${juegos.image}">
                                 <span class="position-absolute top-100 end-0 translate-middle badge bg-danger fs-6"></span>
                                 <a class="btn btn-primary" th:title="Comprar"><span class="bi bi-plus-circle"></span> Comprar</a>
                                 <div class="card-body">
-                                    <h5 class="card-title" >
+                                    <h5 class="card-title" th:text="${juegos.nombre}">
 
                                     </h5>
-                                    <p class="card-text"></p>
+                                    <p class="card-text" th:text="${juegos.descripcion}"></p>
                                 </div>
                             </div>
                         </div>
