--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -17,10 +17,10 @@
         <div class="collapse navbar-collapse justify-content-star" id="navbar-app">
             <ul sec:authorize="isAuthenticated()" class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" th:classappend="${option == 'Vista'}?'active' :''" th:href="@{/vista}">Juegos</a>
+                    <a class="nav-link" th:classappend="${option == 'Vista'}?'active' :''" th:href="@{/juegos/lista}">Juegos</a>
                 </li>
                 <li sec:authorize="hasAuthority('USER')" class="nav-item">
-                    <a class="nav-link" th:classappend="${option == 'Juegos'}?'active' :''" th:href="@{/juegos/lista}"><span>Mis </span>Juegos</a>
+                    <a class="nav-link" th:classappend="${option == 'Juegos'}?'active' :''" th:href="@{/vista}"><span>Mis </span>Juegos</a>
                 </li>
                 <li sec:authorize="hasAuthority('ADMIN')" class="nav-item" >
                     <a class="nav-link" th:classappend="${option == 'Plataformas'}?'active' :''" th:href="@{/plataformas/lista}" >Plataformas</a>
